--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,15 @@
-<h1 style="margin: 0; padding: 1.5rem; text-align: center">Starter</h1>
+<div style="padding: 1.5rem; text-align: center">
+  <h1 style="margin: 0">Starter</h1>
+
+  <p style="margin: 1.5rem 0 0 0">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus possimus sint sequi ab,
+    tempora nihil dicta recusandae molestias assumenda dolor? Vel cumque soluta, ad voluptatibus
+    cupiditate non ea sed voluptates?
+  </p>
+
+  <p style="margin: 1.5rem 0 0 0">
+    <button matButton="tonal"><mat-icon>home</mat-icon> Home</button>
+  </p>
+</div>
 
 <router-outlet />
