Configure library and add styles and icon modules

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,9 @@
   </p>
 
   <p style="margin: 1.5rem 0 0 0">
-    <button matButton="tonal"><mat-icon>home</mat-icon> Home</button>
+    <button matButton="tonal">
+      <mat-icon zIcon animation="spin" animationDuration="2s">settings</mat-icon> Settings
+    </button>
   </p>
 </div>
 
