--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,4 @@
 @use './styles/material';
 
 @use '../projects/ng-zealous/styles/core.scss';
+@use '../projects/ng-zealous/styles/highlight-js.scss';
