--- a/projects/ng-zealous-docs/src/styles.scss
+++ b/projects/ng-zealous-docs/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@use './styles/base';
+@use './styles/fonts';
+@use './styles/material';
+
+@use '../../../projects/ng-zealous/styles/core.scss';
+@use '../../../projects/ng-zealous/styles/highlight-js.scss';
