--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,7 +1,9 @@
-<h1 style="margin: 0">Starter</h1>
+<div style="padding: 1.5rem">
+  <h1 style="margin: 0">Starter</h1>
 
-<p style="margin: 1.5rem 0 0 0">
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus possimus sint sequi ab,
-  tempora nihil dicta recusandae molestias assumenda dolor? Vel cumque soluta, ad voluptatibus
-  cupiditate non ea sed voluptates?
-</p>
+  <p style="margin: 1.5rem 0 0 0">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus possimus sint sequi ab,
+    tempora nihil dicta recusandae molestias assumenda dolor? Vel cumque soluta, ad voluptatibus
+    cupiditate non ea sed voluptates?
+  </p>
+</div>
