Add .md doc for avatar

--- a/projects/ng-zealous-docs/src/app/avatar/avatar.html
+++ b/projects/ng-zealous-docs/src/app/avatar/avatar.html
@@ -1,4 +1,4 @@
-<z-demo-container [state]="demoState">
+<z-demo-container [state]="demoState" [docMarkdown]="docMarkdown">
   <z-avatar
     [style.font-size]="demoState.fontSize()"
     [icon]="demoState.icon()"
