--- a/projects/ng-zealous-docs/src/app/app.html
+++ b/projects/ng-zealous-docs/src/app/app.html
@@ -1,13 +1,13 @@
-<div style="padding: 1.5rem">
-  <nav style="margin-bottom: 1.5rem; display: flex; flex-wrap: wrap; gap: 0.5rem">
-    @for (route of routes; track $index) {
-      <a matButton="text" [routerLink]="`/${route.path}`">
-        <mat-icon>{{ route.data?.['icon'] }}</mat-icon>
-        {{ route.title }}
-      </a>
-    }
-    <z-theme-switcher />
-  </nav>
+<nav class="app-root__nav">
+  @for (route of routes; track $index) {
+    <a matButton="text" [routerLink]="`/${route.path}`">
+      <mat-icon>{{ route.data?.['icon'] }}</mat-icon>
+      {{ route.title }}
+    </a>
+  }
+  <z-theme-switcher />
+</nav>
 
+<main>
   <router-outlet />
-</div>
+</main>
