docs: minor a11y fixes

--- a/projects/ng-zealous-docs/src/app/material-components/material-components.html
+++ b/projects/ng-zealous-docs/src/app/material-components/material-components.html
@@ -2,8 +2,8 @@
 
 <div class="app-material-components__row">
   <button matButton>Button</button>
-  <button matIconButton><mat-icon>home</mat-icon></button>
-  <button matFab><mat-icon>home</mat-icon></button>
+  <button matIconButton aria-label="Action"><mat-icon>home</mat-icon></button>
+  <button matFab aria-label="Action"><mat-icon>home</mat-icon></button>
   <button matButton="tonal"><mat-icon>home</mat-icon> Button</button>
   <button matButton="filled"><mat-icon>home</mat-icon> Button</button>
   <button matButton="elevated">Button</button>
@@ -12,8 +12,8 @@
 
 <div class="app-material-components__row">
   <button matButton matBadge="4">Button</button>
-  <button matIconButton matBadge="4"><mat-icon>home</mat-icon></button>
-  <button matFab matBadge="4"><mat-icon>home</mat-icon></button>
+  <button matIconButton matBadge="4" aria-label="Action"><mat-icon>home</mat-icon></button>
+  <button matFab matBadge="4" aria-label="Action"><mat-icon>home</mat-icon></button>
   <button matButton="tonal" matBadge="4"><mat-icon>home</mat-icon> Button</button>
   <button matButton="filled" matBadge="4"><mat-icon>home</mat-icon> Button</button>
   <button matButton="elevated" matBadge="4">Button</button>
@@ -22,8 +22,8 @@
 
 <div class="app-material-components__row">
   <button disabled matButton>Button</button>
-  <button disabled matIconButton><mat-icon>home</mat-icon></button>
-  <button disabled matFab><mat-icon>home</mat-icon></button>
+  <button disabled matIconButton aria-label="Action"><mat-icon>home</mat-icon></button>
+  <button disabled matFab aria-label="Action"><mat-icon>home</mat-icon></button>
   <button disabled matButton="tonal">Button</button>
   <button disabled matButton="filled">Button</button>
   <button disabled matButton="elevated">Button</button>
@@ -66,8 +66,8 @@
 </div>
 
 <div class="app-material-components__row app-material-components__row--nowrap">
-  <mat-progress-bar mode="determinate" value="40" />
-  <mat-progress-bar mode="indeterminate" />
+  <mat-progress-bar mode="determinate" value="40" aria-label="Progress" />
+  <mat-progress-bar mode="indeterminate" aria-label="Progress" />
 </div>
 
 <div class="app-material-components__row">
